--- a/experiment/experiments.ipynb
+++ b/experiment/experiments.ipynb
@@ -2195,7 +2195,15 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from sklearn.impute import SimpleImputer  # for handling missing value\n",
+    "from sklearn.preprocessing import StandardScaler  # handling feature scaling\n",
+    "from sklearn.preprocessing import OrdinalEncoder   # for ordinal encoder\n",
+    "\n",
+    "## pipelines\n",
+    "from sklearn.pipeline import Pipeline\n",
+    "from sklearn.compose import ColumnTransformer\n"
+   ]
   }
  ],
  "metadata": {
